tests/sksl/errors/ReservedNameEnum.glsl
### Compilation failed:

error: 1: name 'enum' is reserved
int enum;
    ^^^^
1 error
